# crazyflie-exploration

./: .gitignore  CMakeLists.txt  README.md
include/: imu_types.hpp  median_filter.hpp  p2p.hpp  portage.hpp  porting.hpp  sgba.hpp  sgba_portage.hpp  stabilizer_types.hpp  state_machine.hpp  wall_following.hpp  wall_following_with_avoid.hpp  wallfollowing.hpp  wallfollowing_multiranger_onboard.hpp  wallfollowing_with_avoid.hpp
include/exploration/: DroneState.hpp  Explorer.hpp  SGBA.hpp  SetPoint.hpp  StateMachine.hpp  WallFollowing.hpp  state_machine.hpp
include/porting/: porting.hpp
src/: math_supp.hpp  sgba.cpp  state_machine.cpp  wall_following.cpp  wall_following_with_avoid.cpp  wallfollowing.cpp  wallfollowing_multiranger_onboard.cpp  wallfollowing_with_avoid.cpp
src/exploration/: Explorer.cpp  SGBA.cpp  StateMachine.cpp  WallFollowing.cpp
